# HeadHanter_Parser_to_SQL

./: .gitignore  README.md  database_example.ini  main.py  pyproject.toml
src/: db_manager.py  queries.sql  utils.py
